# arc-agi-3-env

./: .gitignore  README.md  arc_agi_3_env.py  pyproject.toml
arc_agi_3_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
arc_agi_3_env_helpers/: __init__.py  actions.py  engine.py  factory.py  formatting.py  sample_game.py  tasks.py
environments/arc_agi_3_env/: README.md  arc_agi_3_env.py  arc_games.py  pyproject.toml
environments/arc_agi_3_env/arc_agi_3_env/: __init__.py
environments/arc_agi_3_env/evals/: README.md  run_recording.py
evals/: README.md  example_games.json  random_results.jsonl  random_results_summary.json  run_recording.py
recordings/: complex-maze-001.97721e05fb36404ea253a613c53d0bab.recording.jsonl  merge-detach-001.28d40227e96e41d893c318c56a6bc75a.recording.jsonl
rl/: README.md  __init__.py  random_policy.py  random_runner.py
tasks/: __init__.py  sample_tasks.json
