[project]
name = "arc-agi-3-env"
description = "PrimeIntellect RL environment for ARC-style maze and ARC-AGI games"
tags = ["game", "arc", "arc-agi", "maze", "multi-turn", "rl"]
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arcengine>=0.9.3",
    "datasets>=3.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "verifiers>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["arc_agi_3_env.py", "arc_games.py", "pyproject.toml", "arc_agi_3_env/__init__.py"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
